Disable the auto-opening of favorites tab which arrived in NB28. Fix CL_Editor regressions (selection, bar editor dialog preset) in recent commits.